@@ -4,7 +4,7 @@ import gov.cdc.nbs.questionbank.exception.NotFoundException;
 
 public class ConceptNotFoundException extends NotFoundException {
     public ConceptNotFoundException(String codeSetNm, String code) {
-        super(String.format("Failed to find concept for Valueset: %s with code: %s", codeSetNm, code));
+        super("Failed to find concept for Valueset: %s with code: %s".formatted(codeSetNm, code));
     }
 
     public ConceptNotFoundException(String message) {
